<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/last_searched_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchExamples">

    <EditText
        android:id="@+id/editText"
        style="@style/Text"
        android:layout_width="0sp"
        android:layout_height="50sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="@string/find_company_or_ticker"
        android:background="@drawable/edit_text_corner"
        android:drawableStart="@drawable/ic_search"
        android:ems="10"
        android:hint="@string/find_company_or_ticker"
        android:inputType="textPersonName"
        android:paddingStart="0sp"
        android:paddingEnd="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewYouSearchedForThis"
        style="@style/Text.Header.Little"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/you_ve_searched_for_this"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewYouSearchedForThis"
        tools:layout_editor_absoluteX="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lastSearchedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewYouSearchedForThis" />
    </ScrollView>

    <TextView
        android:id="@+id/textPopular"
        style="@style/Text.Header.Little"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:text="@string/popular_requests"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textPopular"
        tools:layout_editor_absoluteX="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="340dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewYouSearchedForThis"
            tools:layout_editor_absoluteX="48dp" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>